--- a/app/src/main/res/layout/activity_battery.xml
+++ b/app/src/main/res/layout/activity_battery.xml
@@ -34,7 +34,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/battery"
                 android:contentDescription="Device Icon" />
 
             <LinearLayout
@@ -47,7 +47,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Li-Ion 2716 mAh, non-removable (10.35 Wh)"
+                    android:text="4500 mAh, non-removable"
                     android:textSize="18sp"
 
                     android:textStyle="bold"
@@ -82,15 +82,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Charging:15W wired, PD2.0, 50% in 30 min (advertised)
+                android:text=" Charging:44W wired, 1-50% in 24 min (advertised)
 Wireless (Qi)"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:padding="16dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" Talk Time:Up to 21 h (3G)"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:padding="16dp" />
